Fixed spacing for pricing.svg

--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -80,7 +80,7 @@
 
 /* pricing svg */
   .pricing {
-    margin-top: 10px;
+    margin-top: 0px;
   svg {
     margin: auto;
     padding: 0px;
